k8s/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdk-cockpit-service
  namespace: tdk-cockpit
spec:
  selector:
    app: tdk-cockpit
  ports:
  - port: 80
    targetPort: 8080 # 🔴 IMPORTANT FIX
  type: ClusterIP
